Added link to the open-source code

--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
         </div>
       </div>
       <p id="link-source">
-        <a href="http://">Open-source code</a> by Yuliia Zheliakova
+        <a href="http://github.com/yuliia-zheliakova/weather-app"
+          >Open-source code</a
+        >
+        by Yuliia Zheliakova
       </p>
     </div>
 
