Added local weather as a default

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
           </div>
         </form>
 
-        <h1 id="city">Sydney</h1>
+        <h1 id="city"></h1>
         <ul>
           <li id="date"></li>
-          <li id="weatherDescr">Partly Cloudy</li>
+          <li id="weatherDescr"></li>
         </ul>
         <div class="row">
           <div class="col-6">
@@ -60,7 +60,7 @@
                 class="weather-icon float-left"
               />
               <div class="float-left">
-                <span class="temperature" id="temperature">19</span
+                <span class="temperature" id="temperature"></span
                 ><span class="units">
                   <a href="#" id="celsius-link">°C</a> |
                   <a href="#" id="fahrenheit-link">°F</a>
@@ -70,8 +70,8 @@
           </div>
           <div class="col-6">
             <ul>
-              <li id="humidity">Humidity: 77%</li>
-              <li id="wind">Wind: 8 km/h</li>
+              <li id="humidity"></li>
+              <li id="wind"></li>
             </ul>
           </div>
         </div>
